# ckanext-file-uploader

./: MANIFEST.in  README.md  setup.cfg  setup.py  test.ini
.github/workflows/: test.yml
ckanext/file_uploader/: plugin.py
ckanext/file_uploader/assets/: .gitignore  FileInputComponent.css  webassets.yml
ckanext/file_uploader/templates/package/snippets/: resource_form.html
ckanext/file_uploader/templates/scheming/package/snippets/: resource_form.html
ckanext/file_uploader/tests/: test_plugin.py
ckanext/file_uploader_js/: cli.py  helpers.py  plugin.py  views.py
ckanext/file_uploader_js/assets/: script.js  webassets.yml
ckanext/file_uploader_js/logic/: action.py  auth.py  schema.py  validators.py
ckanext/file_uploader_js/tests/: test_helpers.py  test_plugin.py  test_views.py
ckanext/file_uploader_js/tests/logic/: test_action.py  test_auth.py  test_validators.py
react/: package-lock.json  package.json  webpack.config.js
react/components/FileInputComponent/: index.js
react/components/FileInputComponent/src/: App.js  FileUploader.js
