[metadata]
name = ckanext-file-uploader-js
version = 0.0.1
description = Extensions providing a javascript enhanced file upload widget for creating and editing resources
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/fjelltopp/ckanext-file-uploader-js
author = Chas Nelson
author_email = info@fjelltopp.org
license = AGPL
classifiers =
            Development Status :: 4 - Beta
            License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
            Programming Language :: Python :: 3.7
            Programming Language :: Python :: 3.8
            Programming Language :: Python :: 3.9
            Programming Language :: Python :: 3.10
keywords = resource file upload javascript widget

[options]
packages = find:
namespace_packages = ckanext
install_requires =
include_package_data = True

[options.entry_points]
ckan.plugins =
             file_uploader_js = ckanext.file_uploader_js.plugin:FileUploaderJSPlugin

babel.extractors =
                 ckan = ckan.lib.extract:extract_ckan

[options.extras_require]

[extract_messages]
keywords = translate isPlural
add_comments = TRANSLATORS:
output_file = ckanext/file_uploader_js/i18n/ckanext-file_uploader_js.pot
width = 80

[init_catalog]
domain = ckanext-file_uploader_js
input_file = ckanext/file_uploader_js/i18n/ckanext-file_uploader_js.pot
output_dir = ckanext/file_uploader_js/i18n

[update_catalog]
domain = ckanext-file_uploader_js
input_file = ckanext/file_uploader_js/i18n/ckanext-file_uploader_js.pot
output_dir = ckanext/file_uploader_js/i18n
previous = true

[compile_catalog]
domain = ckanext-file_uploader_js
directory = ckanext/file_uploader_js/i18n
statistics = true

[tool:pytest]
filterwarnings =
        ignore::sqlalchemy.exc.SADeprecationWarning
        ignore::sqlalchemy.exc.SAWarning
        ignore::DeprecationWarning
addopts = --ckan-ini test.ini
