[metadata]
name = ckanext-file-uploader
version = 0.0.1
description = Extensions providing a javascript enhanced file upload widget for creating and editing resources
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/fjelltopp/ckanext-file-uploader
author = Chas Nelson
author_email = info@fjelltopp.org
license = AGPL
classifiers =
            Development Status :: 4 - Beta
            License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
            Programming Language :: Python :: 3.7
            Programming Language :: Python :: 3.8
            Programming Language :: Python :: 3.9
            Programming Language :: Python :: 3.10
keywords = ckan resource file upload javascript widget

[options]
packages = find:
namespace_packages = ckanext
install_requires =
include_package_data = True

[options.entry_points]
ckan.plugins =
             file_uploader = ckanext.file_uploader.plugin:FileUploaderPlugin

babel.extractors =
                 ckan = ckan.lib.extract:extract_ckan

[options.extras_require]

[extract_messages]
keywords = translate isPlural
add_comments = TRANSLATORS:
output_file = ckanext/file_uploader/i18n/ckanext-file_uploader.pot
width = 80

[init_catalog]
domain = ckanext-file_uploader
input_file = ckanext/file_uploader/i18n/ckanext-file_uploader.pot
output_dir = ckanext/file_uploader/i18n

[update_catalog]
domain = ckanext-file_uploader
input_file = ckanext/file_uploader/i18n/ckanext-file_uploader.pot
output_dir = ckanext/file_uploader/i18n
previous = true

[compile_catalog]
domain = ckanext-file_uploader
directory = ckanext/file_uploader/i18n
statistics = true

[tool:pytest]
filterwarnings =
        ignore::sqlalchemy.exc.SADeprecationWarning
        ignore::sqlalchemy.exc.SAWarning
        ignore::DeprecationWarning
addopts = --ckan-ini test.ini
